# course-compilation

./: docker-compose.yml
course-app/: Dockerfile  pubspec.yaml
course-app/lib/: constants.dart  main.dart  router.dart
course-app/lib/arguments/: edit_course_page.dart
course-app/lib/cache/: cache.dart
course-app/lib/models/: course_model.dart  teacher_model.dart  user_model.dart
course-app/lib/pages/: create_course_page.dart  edit_course_page.dart  enrolled_course.dart  home_page.dart  lobby_page.dart  login_page.dart  my_course_page.dart  register_page.dart  search_course_page.dart  teachers_page.dart
course-app/lib/services/: api.dart  network_config.dart
course-app/lib/services/auth/: auth_service.dart
course-app/lib/services/course/: course_service.dart
course-app/lib/services/user/: user_service.dart
course-app/lib/widgets/: course_form.dart  course_tile.dart  student_list_dialog.dart
course-app/linux/: CMakeLists.txt
course-app/macos/Runner.xcodeproj/: project.pbxproj
course-app/test/: course_test.dart
course-app/web/: index.html
course-app/windows/: CMakeLists.txt
course-app/windows/runner/: Runner.rc  main.cpp
course-backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
course-backend/course/: settings.py  urls.py
course-backend/courses/: models.py  serializers.py  urls.py  views.py
course-backend/courses/migrations/: 0001_initial.py
course-backend/users/: authentication.py  filters.py  models.py  serializers.py  urls.py  views.py
course-backend/users/migrations/: 0001_initial.py  0002_user_role.py
(+2 files in other folders)
