[tool.poetry]
name = "course"
version = "0.1.0"
description = ""
authors = ["RichardBoyz <r1382333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
django-cors-headers = "^4.3.1"
PyJWT = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
